--- a/GitHub Notebook Cloud Imports/Hello_World!_I_am_ready_to_be_imported.ipynb
+++ b/GitHub Notebook Cloud Imports/Hello_World!_I_am_ready_to_be_imported.ipynb
@@ -1,1 +1,39 @@
-
+{
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "cells": [
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "id": "L-yKOcLrRSXh"
+      },
+      "outputs": [],
+      "source": [
+        "def foo(source):\n",
+        "  print(\"Hello World:\", \"I am bieng executed from the source:\", source)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "-XF6x4AdRjGU"
+      },
+      "execution_count": null,
+      "outputs": []
+    }
+  ]
+}
