--- a/GitHub Notebook Cloud Imports/Hello_World!_I_am_ready_to_be_imported.ipynb
+++ b/GitHub Notebook Cloud Imports/Hello_World!_I_am_ready_to_be_imported.ipynb
@@ -23,7 +23,7 @@
       "outputs": [],
       "source": [
         "def foo(source):\n",
-        "  print(\"Hello World:\", \"I am bieng executed from the source:\", source)"
+        "  print(\"Hello World:\", \"I am being executed from the:\", source)"
       ]
     },
     {
